--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "JQueryDurationPicker",
+    "name": "jquery-duration-picker",
     "version": "1.0.0",
     "title": "JQuery Duration Picker",
     "author": {
